Color Palette and Texture

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 /* Stylesheet */
+/* Color Palette:
+Dirty Brown Hex BF885A
+Coral Hex 		F57676
+Peach Hex 		FF9578
+*/
+
+
+
+
 header {
         background: blue;
 }
