Copied direct css link into style sheet

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,23 @@ Peach Hex 		FF9578
 */
 
 
+/* 
 
+Color Palette: 
+#F0F0D8 Primary: light muave green
+#967C52 Secondary: darker brown
+#CFCFCF Tertiary: light gray
+
+*/
+
+body {
+        background: url("../img/bg.png");
+}
 
 header {
-        background: blue;
+        
 }
 
 nav {
-        background: green;
+        
 }
